# tap-google-search-console

./: .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml
.github/: dependabot.yml
tap_google_search_console/: __init__.py  client.py  streams.py  tap.py
tap_google_search_console/schemas/: performance_report_country.json  performance_report_date.json  performance_report_device.json  performance_report_keys.json  performance_report_page.json  performance_report_query.json
tests/: test_core.py
