[tool.poetry]
name = "acarter24-tap-google-search-console"
version = "0.0.1"
description = "`tap-google-search-console` is a Singer tap for google-search-console, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Andy Carter <andy.carter@empiric.co.uk>"]
keywords = [
    "ELT",
    "google-search-console",
]
license = "Apache-2.0"
packages = [
    { include = "tap_google_search_console" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
singer-sdk = { version="~=0.42.1" }
fs-s3fs = { version = "~=1.1.1", optional = true }
google-api-python-client = "^2.108.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.42.1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
required-version = ">=0.14"
src = ["tap_google_search_console"]
target-version = "py38"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_google_search_console"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-google-search-console = 'tap_google_search_console.tap:TapGoogleSearchConsole.cli'
